--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas Drawing and Save</title>
+    <title>Smooth Drawing Canvas</title>
     <style>
         #drawingCanvas {
             border: 1px solid black;
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>Canvas Drawing and Save</h1>
+    <h1>Canvas Drawing with Smooth Lines</h1>
     <canvas id="drawingCanvas" width="500" height="500"></canvas>
     <br>
     <button id="saveButton">Save as JPG</button>
@@ -31,22 +31,41 @@
         const outputImage = document.getElementById("outputImage");
 
         let drawing = false;
+        let lastX = 0;
+        let lastY = 0;
 
         // Start drawing
-        canvas.addEventListener("mousedown", () => drawing = true);
-        canvas.addEventListener("mouseup", () => drawing = false);
-        canvas.addEventListener("mousemove", draw);
-
-        function draw(event) {
-            if (!drawing) return;
+        canvas.addEventListener("mousedown", (e) => {
+            drawing = true;
             const rect = canvas.getBoundingClientRect();
-            const x = event.clientX - rect.left;
-            const y = event.clientY - rect.top;
-            ctx.fillStyle = "black";
+            lastX = e.clientX - rect.left;
+            lastY = e.clientY - rect.top;
+        });
+
+        canvas.addEventListener("mouseup", () => {
+            drawing = false;
+        });
+
+        canvas.addEventListener("mousemove", (e) => {
+            if (!drawing) return;
+
+            const rect = canvas.getBoundingClientRect();
+            const currentX = e.clientX - rect.left;
+            const currentY = e.clientY - rect.top;
+
+            // Draw smooth line
             ctx.beginPath();
-            ctx.arc(x, y, 2, 0, Math.PI * 2);
-            ctx.fill();
-        }
+            ctx.moveTo(lastX, lastY); // Move to previous point
+            ctx.lineTo(currentX, currentY); // Draw to current point
+            ctx.strokeStyle = "black";
+            ctx.lineWidth = 2;
+            ctx.stroke();
+            ctx.closePath();
+
+            // Update last position
+            lastX = currentX;
+            lastY = currentY;
+        });
 
         // Save as JPG and display
         saveButton.addEventListener("click", () => {
