--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <h1>Drawing Canvas with Erase and Clear Options</h1>
+    <h1>sticky note</h1>
     <canvas id="drawingCanvas" width="400" height="400"></canvas>
     <div id="controls">
         <div>
